# cxdb-graph-ui

./: .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  opencode.json  pipeline.dot  run.yaml
.ai/: postmortem_latest.md  review_final.md  spec.md  unimplemented_specifications.md  verify_browser.md
docs/: cxdb-console-guide.md  software-factory.md
factory/: pipeline-config.yaml  run.yaml
frontend/: .eslintrc.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
holdout-scenarios/: cxdb-graph-ui-holdout-scenarios.md  proposed-holdout-scenarios-to-review.md
pipeline-config/: implement.md  pipeline-config.yaml  postmortem.md  review_final.md  verify_browser.md
script/: build.sh  run-server.sh  setup.sh  smoke-test-suite-fast  smoke-test-suite-full  start-cxdb-graph-ui.sh  start-cxdb-ui.sh  start-cxdb.sh  stop-cxdb-graph-ui.sh  stop-cxdb.sh
server/: Cargo.toml
server/assets/: index.html
server/assets/assets/: index-Bmp4OIjF.js  index-Bn_FT6IN.js  index-D0Eaorup.css  index-OtydKzNY.js
server/src/: config.rs  cxdb_proxy.rs  dot_parser.rs  error.rs  lib.rs  main.rs  server.rs
server/tests/: integration.rs
server/tests/fixtures/: multi-tab-b.dot  simple-pipeline.dot
specification-critiques/: v1-opus.md  v11-opus-acknowledgement.md  v13-opus.md  v14-opus-acknowledgement.md  v17-codex.md  v19-codex-acknowledgement.md  v19-opus-acknowledgement.md  v20-opus-acknowledgement.md  v20-opus.md  v22-opus.md  v23-opus-acknowledgement.md  v25-codex-acknowledgement.md  v27-codex.md  v29-opus.md  (+34 more)
(+314 files in other folders)
